fix slide-dot wrong position under ie

--- a/app/assets/stylesheets/modules/others.sass
+++ b/app/assets/stylesheets/modules/others.sass
@@ -127,7 +127,7 @@
   .slide-dot
     +clearfix
     position: absolute
-    display: inline-block
+    left: 50%
     margin-left: -31px
     bottom: 5%
     li
